--- a/src/styles/layout/_user-menu.scss
+++ b/src/styles/layout/_user-menu.scss
@@ -1,6 +1,7 @@
 .user-menu__container {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 .user-menu__notification {
   display: flex;
