--- a/src/app/profile/components/user-info-card/user-info-card.component.html
+++ b/src/app/profile/components/user-info-card/user-info-card.component.html
@@ -13,10 +13,14 @@
       <h2>@{{ user.usuNickname }}</h2>
       <p>
         {{ user.perfil.biografia }}
+        <br />
+        <small>{{ user.perfil.pais.nombrePais }}</small>
       </p>
     </div>
     <div class="user-info__badges">
-      <span *ngFor="let skill of user.perfil.conocimientos">{{ skill }}</span>
+      <span *ngFor="let skill of user.perfil.conocimientos">
+        {{ skill.nombreConocimiento }}
+      </span>
     </div>
     <div class="user-info__actions">
       <span *ngFor="let red of user.perfil.redesSociales">{{ red }}</span>
