remove some comments inside register.html & authService; apply submenu class active-route; apply condition within user-info-card (this.perfil.pais)

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -55,7 +55,7 @@
             {{ passErrors | validationErrors }}
           </span>
         </div>
-        <div class="form-group">
+        <div class="form-group" *ngIf="activeUsuClave">
           <label class="form-label">CONFIRMAR CONTRASEÑA</label>
           <input
             class="form-control"
@@ -92,7 +92,7 @@
             type="submit"
             [disabled]="isLoading"
           >
-            Signup
+            Registrate
           </button>
         </div>
         <div class="form-group register-terms">
