add models and logic to present the edit info user

--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -3,5 +3,5 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
   justify-content: center;
   min-height: 100vh;
-  padding: 20vh 3vw 0;
+  padding: 10% 3vw 0;
 }
