--- a/src/app/profile/components/edition/edition.component.html
+++ b/src/app/profile/components/edition/edition.component.html
@@ -1,12 +1,12 @@
 <button class="button button-primary" routerLink="/profile">Regresar</button>
 <section class="content">
-  <div class="tab-pane fade in active">
-    <form
-      [formGroup]="editForm"
-      (ngSubmit)="onSubmit()"
-      class="form"
-      *ngIf="this.renderPaises"
-    >
+  <form
+    [formGroup]="editForm"
+    (ngSubmit)="onSubmit()"
+    class="form"
+    *ngIf="this.renderPaises"
+  >
+    <div class="form-group wrapper">
       <div class="form-group">
         <label class="form-label">NICKNAME</label>
         <input
@@ -47,33 +47,35 @@
           <strong> ¿Olvido su contraseña? ¡Click Aqui! </strong>
         </a>
       </div>
-      <div class="form-group">
-        <label class="form-label">CONTRASEÑA</label>
-        <input
-          class="form-control"
-          [class.error]="passErrors"
-          placeholder="Escriba su contraseña"
-          type="password"
-          formControlName="usuClave"
-        />
-        <span class="input__error" *ngIf="passErrors">
-          {{ passErrors | validationErrors }}
-        </span>
-      </div>
-      <div class="form-group">
-        <label class="form-label">CONFIRMAR CONTRASEÑA</label>
-        <input
-          class="form-control"
-          placeholder="Confirme su contraseña"
-          [class.error]="confirmErrors"
-          type="password"
-          formControlName="usuClave2"
-        />
-        <span class="input__error" *ngIf="confirmErrors">
-          {{ confirmErrors | validationErrors }}
-        </span>
-      </div>
+    </div>
+    <div class="form-group">
+      <label class="form-label">CONTRASEÑA</label>
+      <input
+        class="form-control"
+        [class.error]="passErrors"
+        placeholder="Escriba su contraseña"
+        type="password"
+        formControlName="usuClave"
+      />
+      <span class="input__error" *ngIf="passErrors">
+        {{ passErrors | validationErrors }}
+      </span>
+    </div>
+    <div class="form-group" *ngIf="activeUsuClave">
+      <label class="form-label">CONFIRMAR CONTRASEÑA</label>
+      <input
+        class="form-control"
+        placeholder="Confirme su contraseña"
+        [class.error]="confirmErrors"
+        type="password"
+        formControlName="usuClave2"
+      />
+      <span class="input__error" *ngIf="confirmErrors">
+        {{ confirmErrors | validationErrors }}
+      </span>
+    </div>
 
+    <div class="form-group wrapper">
       <div class="form-group">
         <label class="form-label">GENERO</label>
         <select
@@ -82,7 +84,6 @@
           type="text"
           formControlName="genero"
         >
-          <option value="">Seleccione una opción</option>
           <option value="1">Se identifica con hombre</option>
           <option value="2">Se identifica con mujer</option>
           <option value="3">Prefiero no contestar</option>
@@ -91,83 +92,81 @@
           {{ generoErrors | validationErrors }}
         </span>
       </div>
+
       <div class="form-group">
-        <label class="form-label">País</label>
+        <label class="form-label">FECHA DE NACIMIENTO</label>
+        <input
+          class="form-control"
+          type="date"
+          formControlName="fechaNacimiento"
+        />
+      </div>
+
+      <div class="form-group">
+        <label class="form-label">PAÍS</label>
         <select
           class="form-control"
           placeholder="Escriba su país"
           type="text"
           formControlName="pais"
         >
-          <option value="">Seleccione una opción:</option>
           <option *ngFor="let val of this.renderPaises" [value]="val.idPais">
             {{ val.nombrePais }}
           </option>
         </select>
       </div>
+    </div>
+    <div class="form-group">
+      <label class="form-label">BIOGRAFÍA</label>
+      <textarea
+        class="form-control"
+        [class.error]="biografiaErrors"
+        placeholder="Escriba un pequeño fragmento que lo describa"
+        type="text"
+        formControlName="biografia"
+      ></textarea>
+      <span class="input__error" *ngIf="biografiaErrors">
+        {{ biografiaErrors | validationErrors }}
+      </span>
+    </div>
 
-      <div class="form-group">
-        <label class="form-label">BIOGRAFÍA</label>
-        <textarea
+    <div class="form-group">
+      <label class="form-label">CONOCIMIENTOS</label>
+      <select
+        class="form-control"
+        type="text"
+        formControlName="conocimientos"
+        multiple
+      >
+        <option *ngFor="let item of renderConoc" [value]="item.idConocimiento">
+          {{ item.nombreConocimiento }}
+        </option>
+      </select>
+    </div>
+
+    <div class="form-group wrapper" formArrayName="redesSociales">
+      <div
+        class="form-group"
+        *ngFor="let red of redesSociales.controls; index as i"
+      >
+        <label class="form-label">{{ getRedSocialNombre(i + 1) }}</label>
+        <input
           class="form-control"
-          [class.error]="biografiaErrors"
-          placeholder="Escriba un pequeñoo fragmento que lo describa"
+          [placeholder]="(getRedSocialNombre(i + 1) | titlecase) + ' user'"
           type="text"
-          formControlName="biografia"
-        ></textarea>
-        <span class="input__error" *ngIf="biografiaErrors">
-          {{ biografiaErrors | validationErrors }}
-        </span>
+          [formControlName]="i"
+        />
       </div>
+    </div>
 
-      <div class="form-group">
-        <label class="form-label">CONOCIMIENTOS</label>
-        <select
-          class="form-control"
-          type="text"
-          formControlName="conocimientos"
-          multiple
-        >
-          <option value="">Selección múltiple</option>
-          <option value="1">Front end</option>
-          <option value="2">Backend</option>
-          <option value="3">DevOps</option>
-          <option value="4">Video Game Developers</option>
-          <option value="5">UI/UX</option>
-          <option value="6">Database Developer</option>
-          <option value="7">Cloud Computing</option>
-        </select>
-      </div>
-
-      <div class="form-nested__child" formGroupName="redesSociales">
-        REDES SOCIALES
-        <div class="form-group">
-          <label class="form-label">facebook.com/</label>
-          <input class="form-control" placeholder="usuario fb" type="text" />
-        </div>
-        <div class="form-group">
-          <label class="form-label">github.com/</label>
-          <input class="form-control" placeholder="usuario gh" type="text" />
-        </div>
-        <div class="form-group">
-          <label class="form-label">linkedin.com/in/</label>
-          <input class="form-control" placeholder="usuario ln" type="text" />
-        </div>
-        <div class="form-group">
-          <label class="form-label">twitter.com/</label>
-          <input class="form-control" placeholder="usuario tw" type="text" />
-        </div>
-      </div>
-
-      <div class="form-group btn-container">
-        <button
-          class="button button-primary button-block"
-          type="submit"
-          [disabled]="isLoading"
-        >
-          Guardar Cambio
-        </button>
-      </div>
-    </form>
-  </div>
+    <div class="form-group btn-container">
+      <button
+        class="button button-primary button-block"
+        type="submit"
+        [disabled]="isLoading"
+      >
+        Guardar Cambios
+      </button>
+    </div>
+  </form>
 </section>
