--- a/src/styles/layout/_profile.scss
+++ b/src/styles/layout/_profile.scss
@@ -46,3 +46,32 @@
 .user-info {
   @include card;
 }
+
+.user-info__actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-around;
+    width: 100%;
+    min-height: 40px;
+    padding: 0;
+    text-align: center;
+    list-style: none;
+    li:empty {
+      display: none;
+    }
+    li {
+      flex: 1;
+      a {
+        font-weight: 700;
+        color: $font-color;
+      }
+    }
+  }
+}
