--- a/src/app/user-menu/user-menu/user-menu.component.html
+++ b/src/app/user-menu/user-menu/user-menu.component.html
@@ -5,7 +5,7 @@
   <article class="user-menu__content">
     <div class="user-menu__header">
       <div class="user-menu__avatar">
-        <img [src]="'https://i.pravatar.cc/150' | domSanitizer" alt="avatar" />
+        <img [src]="user.perfil.avatar | domSanitizer" alt="avatar" />
         <span class="far user"></span>
       </div>
       <h2
