--- a/src/app/home/components/communities/communities.component.html
+++ b/src/app/home/components/communities/communities.component.html
@@ -1,8 +1,8 @@
 <div class="col-sm-3 communities">
-  <div class="f-title">
-    <div class="row">
-      <h1 class="col-sm-9">Comunidades</h1>
-      <a routerLink="/communities" class="col-sm-3" style="color: white">
+    <div class="f-title">
+        <div class="row">
+            <h1 class="col-sm-9">Comunidades</h1>
+            <a routerLink="/communities" class="col-sm-3" style="color: white">
         Ver más</a
       >
     </div>
@@ -25,11 +25,11 @@
             ><a class="col-sm-8" title=" " href="{{ community.link }}">{{
               community.name
             }}</a>
-            <div class="col-sm-4"><a href="">Unirme</a></div></span
-          >
+            <div class="col-sm-4"><a href="">Unirme</a></div>
+            </span>
         </div>
         <div style="clear: both"></div>
-      </li>
-    </ul>
-  </div>
+        </li>
+        </ul>
+    </div>
 </div>
