--- a/src/app/profile/components/badges/badges.component.html
+++ b/src/app/profile/components/badges/badges.component.html
@@ -1,1 +1,26 @@
-<p>badges works!</p>
+<h2 class="center">Mis insignias</h2>
+<div class="container">
+  <div class="row">
+    <div *ngFor="let badge of badges" class="col-md-4">
+      <div class="card-badge">
+        <div class="card-b-img">
+          <img src="{{badge.image}}">
+          <h1>{{badge.title}}</h1>
+        </div>
+        <div class="card-b-body">
+          <h2>{{badge.category}}</h2>
+          <p class="description">{{badge.description}}
+          </p>
+          <hr>
+          <h2>¿Como ganarla?
+          </h2>
+          <div class="card-b-body">
+            <p>{{badge.description_win}}
+            </p>
+          </div>
+        </div>
+    </div>
+    </div>
+
+  </div>
+</div>
