--- a/src/app/profile/components/groups/groups.component.html
+++ b/src/app/profile/components/groups/groups.component.html
@@ -1,4 +1,4 @@
-<!-- <p>groups works!</p> -->
+<h2 class="center">Mis grupos</h2>
 <div class="container">
     <div class="row" >
 <div *ngFor="let group of groups" class="col-md-4">
