add first reducer (loader)

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -56,6 +56,7 @@
             type="submit"
             [disabled]="isLoading"
           >
+            <span class="fas sync spin" *ngIf="storeLoader$ | async"></span>
             INICIAR SESIÓN
           </button>
         </div>
