--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -92,6 +92,8 @@
             type="submit"
             [disabled]="isLoading"
           >
+            <span class="fas sync spin" *ngIf="storeLoader$ | async"></span>
+
             Registrate
           </button>
         </div>
