set actions with effects within user-menu

--- a/src/app/user-menu/user-menu/user-menu.component.html
+++ b/src/app/user-menu/user-menu/user-menu.component.html
@@ -1,28 +1,30 @@
-<div class="user-menu__container" *ngIf="user$ | async as user">
-  <button class="button user-menu__notification">
-    <span class="far bell"></span>
-  </button>
-  <article class="user-menu__content">
-    <div class="user-menu__header">
-      <div class="user-menu__avatar">
-        <img [src]="user.perfil.avatar | domSanitizer" alt="avatar" />
-        <span class="far user"></span>
+<ng-container *ngIf="user">
+  <div class="user-menu__container">
+    <button class="button user-menu__notification">
+      <span class="far bell"></span>
+    </button>
+    <article class="user-menu__content">
+      <div class="user-menu__header">
+        <div class="user-menu__avatar">
+          <!-- <img [src]="user.perfil.avatar | domSanitizer" alt="avatar" /> -->
+          <span class="far user"></span>
+        </div>
+        <h2
+          class="user-menu__title"
+          [class.active]="isShowSubmenu"
+          (click)="showSubmenu()"
+        >
+          <small>Welcome &nbsp;</small><br />
+          @{{ user.usuNickname }}
+        </h2>
       </div>
-      <h2
-        class="user-menu__title"
-        [class.active]="isShowSubmenu"
-        (click)="showSubmenu()"
-      >
-        <small>Welcome &nbsp;</small><br />
-        @{{ user.usuNickname }}
-      </h2>
-    </div>
 
-    <div class="user-menu__actions" [class.active]="isShowSubmenu">
-      <div class="actions__content">
-        <button class="link" (click)="goMyProfile()">Mi perfil</button>
-        <button class="link" (click)="logout()">Cerrar sesión</button>
+      <div class="user-menu__actions" [class.active]="isShowSubmenu">
+        <div class="actions__content">
+          <button class="link" (click)="goMyProfile()">Mi perfil</button>
+          <button class="link" (click)="logout()">Cerrar sesión</button>
+        </div>
       </div>
-    </div>
-  </article>
-</div>
+    </article>
+  </div>
+</ng-container>
