change navbar, social and footer styles; add state to user-menu and navbar; split styles into keyframes and socials scss

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -54,8 +54,11 @@
           <button
             class="button button-primary button-block"
             type="submit"
-            [disabled]="isLoading"
+            [disabled]="isLoading$ | async"
           >
+            <ng-container *ngIf="isLoading$ | async">
+              <span class="fas sync spin"></span> &nbsp; &nbsp;
+            </ng-container>
             INICIAR SESIÓN
           </button>
         </div>
