--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" *ngIf="user$ | async as user; else socials">
+<nav class="navbar" *ngIf="user; else socials">
   <ul class="navbar__links">
     <li class="navbar__item">
       <a
