--- a/src/styles/base/_index-base.scss
+++ b/src/styles/base/_index-base.scss
@@ -1,4 +1,5 @@
-@import "./normalize";
-@import "./fontawesome";
-@import "./main";
-@import "./buttons-links";
+@import "normalize";
+@import "fontawesome";
+@import "main";
+@import "buttons-links";
+@import "keyframes";
