--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -13,12 +13,17 @@ $color-gray0: #e5e5e5;
 $color-gray1: #ddd;
 $color-gray2: #666;
 
+$bg-color-loader: #0d0d0d22;
+$border-color-loader: #efefefef;
+
 $color-bg: #333;
 $color-font: #e5e5e5;
 $color-primary: #69156a;
+
 $color-secondary: #ffb703;
 $color-p-lighten: #8a178c;
 $color-p-darken: #521e87;
+
 $color-danger: #c40b00;
 $color-danger-alpha: #c40b0050;
 
