--- a/src/styles/layout/_index-layout.scss
+++ b/src/styles/layout/_index-layout.scss
@@ -1,5 +1,6 @@
 @import "header";
 @import "navbar";
+@import "loader";
 @import "user-menu";
 @import "content";
 @import "login";
@@ -8,7 +9,7 @@
 @import "form-label";
 @import "home";
 @import "modal";
-@import "media";
+@import "socials";
 @import "counter";
 @import "profile";
 @import "footer";
