--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-header> </app-header>
-<router-outlet></router-outlet>
+<app-loader
+  [isLoading]="isLoading"
+  *ngIf="isLoading$ | async as isLoading"
+></app-loader>
+<div class="outlet__wrapper">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
