--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,9 +1,4 @@
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12 center margin-15">
-        Copyright ©2021 Developed by Team Angular #8
-      </div>
-    </div>
-  </div>
+<footer class="footer">
+  Copyright {{ year }}&copy; &nbsp; Developed by Team Angular 8️⃣ ...·-: 😎
+  :-·...
 </footer>
