--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -12,6 +12,7 @@ $color-black: #000;
 $color-gray0: #e5e5e5;
 $color-gray1: #ddd;
 $color-gray2: #666;
+$color-gray3: #484848;
 
 $bg-color-loader: #0d0d0d22;
 $border-color-loader: #efefefef;
