--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -2,6 +2,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
   justify-content: center;
-  min-height: 100vh;
-  padding: 10% 3vw 0;
+  min-height: calc(100vh - 20vh - 52px);
+  padding: 5% 3vw;
 }
