--- a/src/styles/layout/_loader.scss
+++ b/src/styles/layout/_loader.scss
@@ -1,13 +1,12 @@
 .loader__wrapper {
   position: fixed;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  padding-top: 20%;
   background-color: $bg-color-loader;
   overflow: hidden;
   z-index: 50000;
